--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
     defaultConfig {
         applicationId "com.tigro.lajoie"
-        minSdk 21
+        minSdk 22
         targetSdk 31
         versionCode 1
         versionName "1.0"
@@ -40,21 +40,27 @@ android {
 
 dependencies {
     implementation 'androidx.test.ext:junit-ktx:1.1.3'
-    def nav_version = "2.4.0-beta02"
+    def nav_version = "2.4.0-rc01"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
 
+    implementation 'org.ocpsoft.prettytime:prettytime:4.0.4.Final'
 
     def lottieVersion = "4.2.1"
     implementation "com.airbnb.android:lottie:$lottieVersion"
+
+    implementation 'io.coil-kt:coil:1.4.0'
+
+    implementation 'com.uploadcare.android.library:uploadcare-android:3.1.0'
+    implementation 'com.uploadcare.android.widget:uploadcare-android-widget:3.1.0'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
 
-    implementation 'com.google.android.material:material:1.5.0-beta01'
+    implementation 'com.google.android.material:material:1.6.0-alpha01'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
